--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -30,6 +30,128 @@ body {
 }
 
 /*******************
+* HERO SECTION
+********************/
+
+.hero {
+	text-align: center;
+	background-color: $c-light-grayish-blue;
+	&__col {
+		&--image {
+			position: relative;
+			z-index: 0;
+			&::before {
+				content: "";
+				height: 100%;
+				width: 100%;
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				background-size: 100%;
+				background-repeat: no-repeat;
+				background-image: url("../assets/images/bg-intro-mobile.svg");
+				z-index: -1;
+			}
+		}
+	}
+
+	&__img-container {
+		overflow: hidden;
+	}
+
+	&__img {
+		width: 100%;
+		margin-top: -35%;
+	}
+
+	&__title {
+		font-size: 2.2rem;
+		font-weight: $fw-light;
+		color: $c-dark-blue;
+	}
+
+	&__desc {
+		color: $c-grayish-blue;
+		line-height: 1.5;
+	}
+
+	@include min-query($d-laptop) {
+		display: flex;
+		align-items: center;
+		text-align: left;
+		height: 600px;
+
+		/*
+		* Reset container's padding
+		*/
+		.container {
+			padding: 0;
+		}
+
+		&__col {
+			height: 100%;
+			width: 50%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+
+			&--image {
+				order: 2;
+				&::before {
+					width: 100%;
+					background-size: 150%;
+					background-position: left bottom;
+					background-image: url("../assets/images/bg-intro-desktop.svg");
+				}
+			}
+
+			&--text .container {
+				padding-left: 5rem;
+			}
+		}
+
+		/*
+		* Push phone image upwards
+		*/
+		&__img-container {
+			position: absolute;
+			top: -15%;
+			left: 0;
+			width: 100%;
+		}
+
+		/*
+		* Push phone image to right
+		*/
+		&__img {
+			width: 100%;
+			margin-top: 0;
+			transform: translateX(15%);
+		}
+
+		&__title {
+			font-size: 3.3rem;
+		}
+
+		&__desc {
+			font-size: 1.1rem;
+		}
+	}
+
+	@include min-query($d-laptop-l) {
+		/*
+		* Increase padding to try to match other sections' shorter width
+		*/
+		&__col {
+			&--text .container {
+				padding-left: 10rem;
+			}
+		}
+	}
+}
+
+/*******************
 * WHY SECTION
 ********************/
 .why {
