--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -8,3 +8,6 @@ $c-grayish-blue: hsl(233, 8%, 62%);
 $c-light-grayish-blue: hsl(220, 16%, 96%);
 $c-very-light-gray: hsl(0, 0%, 98%);
 $c-white: hsl(0, 0%, 100%);
+$c-very-dark-blue: hsl(232, 55%, 8%);
+$c-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+$c-border: 1px solid rgba(241, 238, 238, 0.2);
