--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -44,7 +44,9 @@
 * humberger/close icons
 */
 .navbar__menu {
-	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: transparent;
 	border: none;
 	cursor: pointer;
@@ -64,7 +66,10 @@
 }
 
 .hide {
-	display: none;
+	opacity: 0;
+	@include min-query($d-laptop) {
+		opacity: 1;
+	}
 }
 /*
 * navbar-section
@@ -128,8 +133,11 @@
 		font-weight: 500;
 		cursor: pointer;
 		position: relative;
-		padding: 2rem 0;
+		padding: 0.5rem;
 		top: 0;
+		@include min-query($d-laptop) {
+			padding: 2rem 0;
+		}
 	}
 	&__list-item--link::after {
 		content: "";
@@ -158,9 +166,10 @@
 	}
 }
 
-.hide.hero__mockups {
-	display: none;
+.hide.hero__img {
+	opacity: 0;
 	@include min-query($d-laptop) {
+		opacity: 1;
 		display: block;
 	}
 }
@@ -195,115 +204,153 @@
 	}
 }
 .hero {
-	background-color: $c-very-light-gray;
-	padding: 0;
-
-	&__container {
-		@include min-query($d-laptop) {
-			display: flex;
-			align-items: center;
+	width: 100%;
+	text-align: center;
+	background-color: $c-light-grayish-blue;
+	position: absolute;
+	z-index: -10;
+	&__col {
+		&--image {
+			position: relative;
+			z-index: 0;
+			&::before {
+				content: "";
+				height: 100%;
+				width: 100%;
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				background-size: 100%;
+				background-repeat: no-repeat;
+				background-position: center 66%;
+				background-image: url("../assets/images/bg-intro-mobile.svg");
+				z-index: -1;
+			}
 		}
 	}
-	&__image {
-		position: relative;
-		background-image: url("../assets/images/bg-intro-mobile.svg");
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center center;
-		min-height: 19.3rem;
-		@include min-query($d-tablet) {
-			min-height: 32rem;
-			background-position: center 66%;
-		}
-		@include min-query($d-laptop) {
-			flex: 3;
-			order: 2;
-			height: 41rem;
-			background-image: none;
-		}
-		&::before {
-			@include min-query($d-laptop) {
-				content: "";
-				position: absolute;
-				height: 128%;
-				background-image: url(../assets/images/bg-intro-desktop.svg);
-				background-repeat: no-repeat;
-				width: 293%;
-				background-size: 100%;
-				background-position: 13% 113%;
-				left: -4%;
-			}
+
+	&__img-container {
+		overflow: hidden;
+	}
+
+	&__img {
+		width: 100%;
+		margin-top: -40%;
+	}
+
+	&__title {
+		font-size: 2.2rem;
+		font-weight: $fw-light;
+		color: $c-dark-blue;
+	}
+
+	&__desc {
+		color: $c-grayish-blue;
+		line-height: 1.5;
+	}
+
+	@include min-query($d-laptop) {
+		display: flex;
+		align-items: center;
+		text-align: left;
+		height: 548px;
+
+		/*
+		* Reset container's padding
+		*/
+		.container {
+			padding: 0;
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
+		&__col {
 			height: 100%;
-			background-image: url(../assets/images/image-mockups.png);
-			background-size: 93%;
-			background-repeat: no-repeat;
-			background-position: center 104%;
-			left: 3%;
+			width: 50%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 
-			@include min-query($d-tablet) {
-				background-size: 81%;
+			&--image {
+				order: 2;
+				&::before {
+					width: 100%;
+					background-size: 150%;
+					background-position: left 200%;
+					background-image: url("../assets/images/bg-intro-desktop.svg");
+				}
 			}
 
-			@include min-query($d-laptop) {
-				.hero__image::after {
-					width: 278%;
-					height: 156%;
-					background-position: center 81%;
-					left: 71%;
-				}
+			&--text .container {
+				padding-left: 5rem;
+			}
+		}
+
+		/*
+		* Push phone image upwards
+		*/
+		&__img-container {
+			position: absolute;
+			top: -15%;
+			left: 0;
+			width: 100%;
+		}
+
+		/*
+		* Push phone image to right
+		*/
+		&__img {
+			width: 100%;
+			margin-top: 0;
+			transform: translateX(15%);
+		}
+
+		&__title {
+			font-size: 3.3rem;
+		}
+
+		&__desc {
+			font-size: 1.1rem;
+		}
+	}
+
+	@include min-query($d-laptop-l) {
+		/*
+		* Increase padding to try to match other sections' shorter width
+		*/
+		&__col {
+			&--text .container {
+				padding-left: 10rem;
 			}
 		}
 	}
 }
-.hero__body,
-.hero__content {
-	background-color: $c-very-light-gray;
-	max-width: 500px;
-	margin: auto;
-	display: flex;
-	padding: 0 1rem;
-	flex-direction: column;
-	align-items: center;
-	justify-items: center;
-	@include min-query($d-laptop) {
-		justify-items: flex-start;
-		align-items: flex-start;
-		padding: 0 0 0 4.89rem;
-		margin: 4.7rem 0;
+/*
+// * overlay section
+// */
+.overlay {
+	pointer-events: all;
+	&::before {
+		content: "";
+		z-index: 10;
+		opacity: 0.77;
+		width: 100%;
+		height: 100vh;
+		display: block;
+		position: absolute;
+		background: linear-gradient(to bottom, $c-very-dark-blue, $c-very-light-gray);
 	}
 
-	&__title {
-		font-size: 2.4rem;
-		width: 84%;
-		margin: 0 auto;
-		text-align: center;
-		font-family: $ff-public-sans;
-		font-weight: 500;
-		@include min-query($d-laptop) {
-			margin: 0;
-			text-align: start;
-		}
+	@include min-query($d-laptop) {
+		opacity: 1;
+		background: linear-gradient(to right top, $c-white, $c-white);
+		pointer-events: none;
 	}
-	&__text {
-		padding: 1.2rem 0 1.9rem 0;
-		line-height: 1.6rem;
-		color: $c-grayish-blue;
-		width: 94%;
-		margin: 0 auto;
-		text-align: center;
-		font-size: 0.95rem;
-		font-family: $ff-public-sans;
-		text-align: justify;
-		@include min-query($d-laptop) {
-			margin: 0;
-			text-align: start;
-			max-width: 84%;
-		}
+}
+
+.hide-scroll {
+	overflow: hidden;
+	height: 50%;
+	@include min-query($d-laptop) {
+		overflow: auto;
 	}
 }
